@@ -1,5 +1,10 @@
 Changes for APR 1.3.0
 
+  *) Documented that apr_stat and apr_dir_read can return APR_INCOMPLETE,
+     and how to determine which parts of the resulting apr_finfo_t can be
+     used in such a case.
+     [Garrett Rooney]
+
   *) Cause apr_file_write_full on win32 to consider the timeout value set by 
      apr_file_pipe_timeout_set.  PR 30182
      [<eholyat olf.com>]
